<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="220dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo_karasica" />


    <TextView
        android:id="@+id/add_new_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/add_new_user"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/card_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_new_user"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/code_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code_card"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/card_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/card_number"
            android:inputType="number"
            android:singleLine="true"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="14sp" />

    </LinearLayout>

    <EditText
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_layout"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/name"
        android:singleLine="true"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/surname_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_input"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/surname"
        android:singleLine="true"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="14sp" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:enabled="true"
        android:letterSpacing="0.1"
        android:text="@string/confirm"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="normal" />


</RelativeLayout>

