<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <RelativeLayout
        android:id="@+id/data_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="220dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo_karasica" />

        <Button
            android:id="@+id/add_card_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimary"
            android:enabled="true"
            android:letterSpacing="0.1"
            android:text="@string/add_card"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/lift_card_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/add_card_button"
            android:layout_marginBottom="40dp"
            android:layout_marginStart="20dp"
            android:text="@string/lift_card_message"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <Button
            android:id="@+id/choose_absence_reason"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_above="@id/lift_card_message"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:background="@color/colorPrimary"
            android:enabled="true"
            android:letterSpacing="0.1"
            android:text="@string/choose_absence_reason"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="normal" />

        <LinearLayout
            android:id="@+id/date_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Datum: "
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/date_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="31.7.2017"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/time_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/date_layout"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Vrijeme: "
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/time_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="11:11"
                android:textColor="@android:color/black"
                android:textSize="14sp" />


        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/time_layout"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp">


            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/status_success"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/status"
                android:layout_centerInParent="true"
                android:gravity="bottom"
                android:letterSpacing="0.1"
                android:scrollbars="vertical"
                android:textColor="@android:color/holo_green_light"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/rfid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/status"
                android:layout_centerInParent="true"
                android:gravity="bottom"
                android:letterSpacing="0.1"
                android:scrollbars="vertical"
                android:textColor="@android:color/holo_green_light"
                android:textSize="26sp"
                android:visibility="visible" />


        </RelativeLayout>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/check_admin_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo_check_admin"
            android:layout_width="220dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo_karasica" />

        <TextView
            android:id="@+id/person_rights"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo_check_admin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/person_rights"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/status_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/person_rights"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:letterSpacing="0.1"
            android:scrollbars="vertical"
            android:textColor="@android:color/holo_green_light"
            android:textSize="24sp"
            tools:text="DA" />

        <TextView
            android:id="@+id/lift_card_message_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="400dp"
            android:text="@string/lift_card_message"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/view_add_user"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo_add"
            android:layout_width="220dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo_karasica" />


        <TextView
            android:id="@+id/add_new_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo_add"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:text="@string/add_new_user"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/card_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_new_user"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/code_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/code_card"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/card_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/card_number"
                android:inputType="number"
                android:singleLine="true"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="14sp" />

        </LinearLayout>

        <EditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_layout"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/name"
            android:singleLine="true"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/surname_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_input"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/surname"
            android:singleLine="true"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="14sp" />

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimary"
            android:enabled="true"
            android:letterSpacing="0.1"
            android:text="@string/confirm"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="normal" />


    </RelativeLayout>


</RelativeLayout>

